--- a/config.json
+++ b/config.json
@@ -1,10 +1,12 @@
 {
   "prefix": "/",
   "token": "OTU4NjkwOTA2MjE3ODAzODA3.G_aCt2.3R1W4oeKPRToCehrKKgXHWpyyUCSBK9DGhl9R4",
+  "version": "0.1.1 Beta",
   "permissions": "8",
   "application_id": "958690906217803807",
   "sync_commands_globally": true,
   "owners": [
     424546094182039552, 290827188033421312
   ]
+  
 }
