--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
   "sync_commands_globally": true,
   "owners": [
     424546094182039552, 290827188033421312
-  ]
+  ],
+  "log_channel_id": 958025710025453640
   
 }
