--- a/config.json
+++ b/config.json
@@ -1,13 +1,14 @@
 {
   "prefix": "/",
   "token": "OTM1MDY3MTE3NDI0ODk4MDY4.G8CiYw.Br7mKUsUlnD0gEAlPCBPP_96qylAxLgEAvdGKI",
-  "version": "2.0.0 Stable",
+  "version": "2.0.1 Stable",
   "permissions": "8",
   "application_id": "958690906217803807",
   "sync_commands_globally": true,
   "owners": [
     424546094182039552, 290827188033421312
   ],
+  "informant": [424546094182039552, 290827188033421312, 299463289333743617, 401334507241996289],
   "log_channel_id": 1026400764408635402
   
 }
