--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
   "prefix": "/",
   "token": "OTM1MDY3MTE3NDI0ODk4MDY4.G8CiYw.Br7mKUsUlnD0gEAlPCBPP_96qylAxLgEAvdGKI",
-  "version": "2.0.2 Stable",
+  "test_token": "OTU4NjkwOTA2MjE3ODAzODA3.G_aCt2.3R1W4oeKPRToCehrKKgXHWpyyUCSBK9DGhl9R4",
+  "main_token": "OTM1MDY3MTE3NDI0ODk4MDY4.G8CiYw.Br7mKUsUlnD0gEAlPCBPP_96qylAxLgEAvdGKI",
+  "version": "2.1.0 Stable",
   "permissions": "8",
   "application_id": "958690906217803807",
   "sync_commands_globally": true,
