--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,5 @@ database/
 cogs/assets/Quote/icon.jpeg
 cogs/assets/Quote/result.png
 cogs/assets/Transcripts/
+cogs/assets/Videos/
+cogs/assets/Images/
