--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "openai_api_key": "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",
   "main_token": "MTA3MDk0NTc2MTQ4MDY3OTQ3NQ.GciprI.Kh1JhRWbGtliiVii3axqZn2Gsm-1bA9oDkZbe0",
   "test_token": "MTA3MDk0NTc2MTQ4MDY3OTQ3NQ.GgNc_1.rVU4FpBTAUzOwlITe6ixkBm4nlDrvnmqbn8fJA",
-  "version": "3.6.0",
+  "version": "R - 3.6.0",
   "permissions": "8",
   "application_id": "1070945112168861786",
   "sync_commands_globally": true,
